# nutri-matic

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  cliff.toml  cspell.json  pyproject.toml
.github/workflows/: black-format.yml  dependency-check.yml  jekyll-gh-pages.yml  ruff-lint.yml  security-audit.yml  spellcheck.yml  tests.yml  typecheck.yml  yaml-lint.yml
changelogs/: CHANGELOG.md
changelogs/releases/: v0.1.10.md  v0.1.11.md  v0.1.12.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.7.md  v0.1.8.md  v0.1.9.md
docs/jekyll/: Makefile  README.md  _config.yml  general.md  index.md
docs/jekyll/_sass/custom/: custom.scss
docs/jekyll/sphinx/: api.md  index.md
docs/jekyll/sphinx/api/: ccutils.add_docs.md  ccutils.ccmeta.md  ccutils.ccmeta.parser.md  ccutils.cli.build.md  ccutils.cli.config.md  ccutils.cli.main.md  ccutils.cli.md  ccutils.cli.options.md  ccutils.cli.options.verbose.md  ccutils.cli.options.version.md  ccutils.cli.templates.md  ccutils.core.bash.md  ccutils.core.config.md  ccutils.core.github.md  ccutils.core.logger.md  ccutils.core.md  ccutils.core.metadata.md  ccutils.core.parser.md  ccutils.core.template.md  ccutils.extract_cookiecutter_config_from_repo.md  ccutils.hooks.md  ccutils.hooks.post_gen_logic.ansible.md  ccutils.hooks.post_gen_logic.docs.md  ccutils.hooks.post_gen_logic.md  ccutils.models.accounts.md  ccutils.models.base.md  ccutils.models.ccmeta.md  ccutils.models.cctemplate.md  ccutils.models.config.md  ccutils.models.github.md  ccutils.models.md  ccutils.models.metadata.md  ccutils.models.template.md  ccutils.run_template.md  nutrimatic.build.ansible.md  nutrimatic.build.md  nutrimatic.build.readme.md  nutrimatic.build.sphinx.md  nutrimatic.build.yaml_front_matter.md  nutrimatic.ccmeta.md  (+39 more)
docs/sphinx/: .gitignore  api.rst  conf.py
src/ccutils/: __init__.py  __main__.py  cli.py
src/ccutils/ccmeta/: __init__.py  parser.py
src/ccutils/cli/: __init__.py  build.py  config.py  main.py  templates.py
src/ccutils/cli/commands/: __init__.py  extract.py  list.py  readme.py  run.py  yaml_front_matter.py
src/ccutils/cli/commands/ccbuild/: __init__.py  readme.py  yaml_front_matter.py
src/ccutils/cli/commands/ccconfig/: __init__.py  config.py
src/ccutils/cli/commands/cctemplates/: __init__.py  generate.py
src/ccutils/cli/commands/ccutils/: __init__.py  docs.py
src/ccutils/cli/options/: __init__.py  verbose.py  version.py
src/ccutils/commands/: __init__.py  docs.py  extract.py  list.py  run.py
src/ccutils/core/: __init__.py  bash.py  config.py  github.py  logger.py  metadata.py  template.py
src/ccutils/core/models/: __init__.py  accounts.py  base.py  config.py  github.py  template.py
src/ccutils/hooks/: __init__.py
src/ccutils/hooks/post_gen_logic/: __init__.py  ansible.py  docs.py
src/ccutils/models/: .gitignore  __init__.py  accounts.py  base.py  ccmeta.py  cctemplate.py  config.py  github.py  metadata.py  template.py
src/ccutils/templates/: __init__.py  cc_templates.py
src/nutrimatic/core/: bash.py
src/nutrimatic/hooks/post_gen_logic/: __init__.py  ansible.py  changelogs.py  docs.py
tests/: test_add_docs.py  test_run_template.py
tests/core/: test_config.py
